Update CLI implementation and dependencies
Refactor the CLI tool to utilize Click for command-line options, enhancing user interaction for fetching Bible verses. Update the `pyproject.toml` to include Click as a dependency and modify the script entry point. Adjust the output handling for verse data and improve error messaging.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "CLI tool for Bible studies"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "click>=8.3.1",
     "loguru>=0.7.3",
     "pytest>=9.0.1",
     "requests>=2.32.5",
@@ -18,7 +19,7 @@ build-backend = "hatchling.build"
 packages = ["app"]
 
 [project.scripts]
-clible = "app.main:main"
+clible = "app.cli:cli"
 
 [tool.pytest.ini_options]
 pythonpath = ["app"]
