--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "click>=8.3.1",
     "docker>=7.1.0",
+    "go-task-bin>=3.45.5",
     "loguru>=0.7.3",
     "pytest>=9.0.1",
     "requests>=2.32.5",
