--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "go-task-bin>=3.45.5",
     "loguru>=0.7.3",
     "pytest>=9.0.1",
+    "pytest-mock>=3.15.1",
     "requests>=2.32.5",
     "rich>=14.2.0",
 ]
