--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ env/
 *.sqlite
 *.sqlite3
 *.sql
-app/data/clible.db
+app/db/*.db
 
 # Testing
 .pytest_cache/
@@ -93,3 +93,7 @@ logs/
 # uv package manager (keep uv.lock, ignore cache)
 .uv/
 uv_cache/
+
+# Development roadmap
+development-roadmap.plan.md
+data/exports/
