Update Dockerfile and Taskfile.yml for improved testing and image tagging
- Added a data directory copy to the Dockerfile and set environment variables for PYTHONPATH and TESTPATH to streamline testing.
- Updated Taskfile.yml to improve variable naming for image tags and ensure consistency in echo commands for image references.
- Refactored commands in the Taskfile to use the new IMAGE_TAG variable for building and tagging Docker images, enhancing clarity and maintainability.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,46 +1,44 @@
 # https://taskfile.dev
 
-version: '3'
-
+version: "3"
 
 silent: true
 
 vars:
-  REGISTRY: '{{.REGISTRY | default (env "REGISTRY") | default "docker.io" }}' 
   DOCKER_USER: '{{env "DOCKER_USER"}}'
-  IMAGE: '{{.DOCKER_USER}}/clible'
-  COMMIT: 
+  COMMIT:
     sh: git rev-parse --short HEAD
-  TAG: "{{.COMMIT}}"
+  IMAGE_TAG: "{{.COMMIT}}"
   PROMO_TAG: latest
-  
+  REGISTRY: '{{.REGISTRY | default (env "REGISTRY") | default "docker.io" }}'
+  IMAGE: "{{.DOCKER_USER}}/clible"
+
 tasks:
   default:
     cmds:
-      - echo "{{.GREETING}}"
-  
+      - task: show-image
   show-image:
     desc: Print fully-qualified image references
     cmds:
-      - echo "{{.REGISTRY}}/{{.IMAGE}}:{{.TAG}}"
+      - echo "{{.REGISTRY}}/{{.IMAGE}}:{{.IMAGE_TAG}}"
       - echo "{{.REGISTRY}}/{{.IMAGE}}:{{.PROMO_TAG}}"
 
   build:
     desc: "Build Docker image"
     deps: []
     cmds:
-      - docker build -t {{.REGISTRY}}/{{.IMAGE}}:{{.TAG}} .
-  
+      - docker build -t {{.REGISTRY}}/{{.IMAGE}}:{{.IMAGE_TAG}} .
+
   tag:
-    desc: Re-tag existing image (e.g. latest)
+    desc: Re-tag existing image to latest tag
     deps: [build]
     cmds:
-      - docker tag {{.REGISTRY}}/{{.IMAGE}}:{{.TAG}} {{.REGISTRY}}/{{.IMAGE}}:{{.PROMO_TAG}}
-      - echo "Tagged {{.REGISTRY}}/{{.IMAGE}}:{{.TAG}} -> {{.PROMO_TAG}}"
-  
+      - docker tag {{.REGISTRY}}/{{.IMAGE}}:{{.IMAGE_TAG}} {{.REGISTRY}}/{{.IMAGE}}:{{.PROMO_TAG}}
+      - echo "Tagged {{.REGISTRY}}/{{.IMAGE}}:{{.IMAGE_TAG}} -> {{PROMO_TAG}}"
+
   push:
-    desc: Push both commit and promo tags
+    desc: Push both image tag and latest tag
     deps: [tag]
     cmds:
-      - docker push {{.REGISTRY}}/{{.IMAGE}}:{{.TAG}}
+      - docker push {{.REGISTRY}}/{{.IMAGE}}:{{.IMAGE_TAG}}
       - docker push {{.REGISTRY}}/{{.IMAGE}}:{{.PROMO_TAG}}
