Add Docker image push step to CI workflow
- Introduced a new step in the CI workflow to push the Docker image after building it.
- Configured environment variables for Docker user and registry, allowing for flexibility in deployment.
- Ensured adherence to coding standards and improved clarity in the CI configuration.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,3 +63,8 @@ jobs:
           if [ -n "$IMAGE_TAG" ]; then
             docker run --rm "$IMAGE_TAG" --help
           fi
+      - name: Push Docker image
+        env:
+          DOCKER_USER: ${{ secrets.DOCKER_USER || 'clible-ci' }}
+          REGISTRY: ${{ secrets.REGISTRY || 'docker.io' }}
+        run: task push
