--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,8 +63,14 @@ jobs:
           if [ -n "$IMAGE_TAG" ]; then
             docker run --rm "$IMAGE_TAG" --help
           fi
+      - name: Login to Docker Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ secrets.REGISTRY }}
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push Docker image
         env:
-          DOCKER_USER: ${{ secrets.DOCKER_USER || 'clible-ci' }}
-          REGISTRY: ${{ secrets.REGISTRY || 'docker.io' }}
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}
+          REGISTRY: ${{ secrets.REGISTRY }}
         run: task push
