--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "pytest-mock>=3.15.1",
     "requests>=2.32.5",
     "rich>=14.2.0",
+    "plotext>=5.2.8",
+    "matplotlib>=3.10.0",
 ]
 
 [build-system]
