Add visualization and analysis tracking features
- Add plotext and matplotlib for terminal and file visualizations
- Implement AnalysisTracker for saving analysis history
- Add history menu for viewing and filtering analyses
- Fix critical bugs in queries.py
- Add comprehensive test coverage (31 new tests)
- Add extensive documentation (5 new docs)

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 SESSION_MANAGER_LOGIC.md
+docs/
+data/
 
 # Python-generated files
 __pycache__/
@@ -100,3 +102,6 @@ uv_cache/
 # Development roadmap
 development-roadmap.plan.md
 data/exports/
+
+# Generated visualization charts
+data/charts/
