--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "loguru>=0.7.3",
     "pytest>=9.0.1",
     "pytest-mock>=3.15.1",
+    "pytest-cov>=6.0.0",
     "requests>=2.32.5",
     "rich>=14.2.0",
     "plotext>=5.2.8",
