--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "rich>=14.2.0",
     "plotext>=5.2.8",
     "matplotlib>=3.10.0",
+    "simple-term-menu>=1.6.6",
 ]
 
 [build-system]
