Update Taskfile to support optional Docker registry and simplify image reference handling
- Added a new variable `REGISTRY` to allow configuration of a Docker registry.
- Introduced `FULL_IMAGE` variable to construct the full image name dynamically based on the presence of a registry.
- Updated tasks to utilize `FULL_IMAGE` for building, tagging, and pushing Docker images, enhancing clarity and maintainability of the Taskfile.
- Improved comments for better understanding and adherence to coding standards.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -6,11 +6,14 @@ silent: true
 
 vars:
   DOCKER_USER: '{{env "DOCKER_USER"}}'
+  REGISTRY: '{{default "" (env "DOCKER_REGISTRY")}}'
   COMMIT:
     sh: git rev-parse --short HEAD
   IMAGE_TAG: "{{.COMMIT}}"
   PROMO_TAG: latest
   IMAGE: "{{.DOCKER_USER}}/clible"
+  # Full image name with or without registry
+  FULL_IMAGE: '{{if .REGISTRY}}{{.REGISTRY}}/{{.IMAGE}}{{else}}{{.IMAGE}}{{end}}'
 
 tasks:
   default:
@@ -19,25 +22,25 @@ tasks:
   show-image:
     desc: Print fully-qualified image references
     cmds:
-      - echo "{{.REGISTRY}}/{{.IMAGE}}:{{.IMAGE_TAG}}"
-      - echo "{{.REGISTRY}}/{{.IMAGE}}:{{.PROMO_TAG}}"
+      - echo "{{.FULL_IMAGE}}:{{.IMAGE_TAG}}"
+      - echo "{{.FULL_IMAGE}}:{{.PROMO_TAG}}"
 
   build:
     desc: "Build Docker image"
     deps: []
     cmds:
-      - docker build -t {{.REGISTRY}}/{{.IMAGE}}:{{.IMAGE_TAG}} .
+      - docker build -t {{.FULL_IMAGE}}:{{.IMAGE_TAG}} .
 
   tag:
     desc: Re-tag existing image to latest tag
     deps: [build]
     cmds:
-      - docker tag {{.REGISTRY}}/{{.IMAGE}}:{{.IMAGE_TAG}} {{.REGISTRY}}/{{.IMAGE}}:{{.PROMO_TAG}}
-      - echo "Tagged {{.REGISTRY}}/{{.IMAGE}}:{{.IMAGE_TAG}} -> {{.PROMO_TAG}}"
+      - docker tag {{.FULL_IMAGE}}:{{.IMAGE_TAG}} {{.FULL_IMAGE}}:{{.PROMO_TAG}}
+      - echo "Tagged {{.FULL_IMAGE}}:{{.IMAGE_TAG}} -> {{.PROMO_TAG}}"
 
   push:
     desc: Push both image tag and latest tag
     deps: [tag]
     cmds:
-      - docker push {{.REGISTRY}}/{{.IMAGE}}:{{.IMAGE_TAG}}
-      - docker push {{.REGISTRY}}/{{.IMAGE}}:{{.PROMO_TAG}}
+      - docker push {{.FULL_IMAGE}}:{{.IMAGE_TAG}}
+      - docker push {{.FULL_IMAGE}}:{{.PROMO_TAG}}
