--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,6 @@
 # Run on version tag push (e.g. git tag v0.1.0 && git push origin v0.1.0).
 # Builds Docker image, tags with version (0.1.0, 0.1, latest), pushes to Docker Hub.
+# Also builds and publishes Python package to PyPI.
 
 name: Release
 
@@ -72,3 +73,31 @@ jobs:
             ${{ env.REGISTRY }}/${{ env.DOCKER_USER }}/clible:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  pypi:
+    runs-on: ubuntu-latest
+    needs: test
+    permissions:
+      contents: read
+      id-token: write # Required for OIDC/Trusted Publisher
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Build package
+        run: uv build
+
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          trusted-publisher: true
