--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,19 @@
 [project]
 name = "clible"
 version = "0.1.0"
+authors = [
+    {name = "clible contributors"}
+]
 description = "CLI tool for Bible studies"
 readme = "README.md"
 requires-python = ">=3.12"
+license = {text = "MIT"}
+license-files = ["LICEN[CS]E*"]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
+    "Operating System :: OS Independent",
+]
 dependencies = [
     "click>=8.3.1",
     "docker>=7.1.0",
@@ -20,8 +30,12 @@ dependencies = [
     "bump2version>=1.0.1",
 ]
 
+[project.urls]
+Homepage = "https://github.com/mvirtai/clible"
+Issues = "https://github.com/mvirtai/clible/issues"
+
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling >= 1.26"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
