--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,12 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["app"]
 
+[project.optional-dependencies]
+dev = [
+    "build>=1.4.0",
+    "twine>=6.2.0",
+]
+
 [project.scripts]
 clible = "app.cli:cli"
 
